WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
278260
ENABLE_MALLOC_HEAP_BREAKDOWN has compilation problems when turned on
https://bugs.webkit.org/show_bug.cgi?id=278260
Summary
ENABLE_MALLOC_HEAP_BREAKDOWN has compilation problems when turned on
Nathan Solomon
Reported
2024-08-16 15:33:06 PDT
Summary: When turning on ENABLE_MALLOC_HEAP_BREAKDOWN, Webkit fails to compile and has many errors. Steps To Reproduce: 1. Set ENABLE_MALLOC_HEAP_BREAKDOWN to 1 (/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/PlatformEnable.h) 2. Set BENABLE_MALLOC_HEAP_BREAKDOWN to 1 (/OpenSource/Source/bmalloc/bmalloc/BPlatform.h) Compile with make d | filter-build-webkit Results: Here are some of the compiler errors: In file included from /Users/nathansolomon/workspace/OpenSource/WebKitBuild/Debug/DerivedSources/WebCore/unified-sources/UnifiedSource105.cpp:3: /Users/nathansolomon/workspace/OpenSource/Source/WebCore/animation/FrameRateAligner.cpp:30:1: error: use of undeclared identifier 'FrameRateAlignerMalloc'; did you mean 'FrameRateAligner'? 30 | DEFINE_ALLOCATOR_WITH_HEAP_IDENTIFIER(FrameRateAligner); In file included from /Users/nathansolomon/workspace/OpenSource/WebKitBuild/Debug/DerivedSources/WebCore/unified-sources/UnifiedSource105.cpp:1: In file included from /Users/nathansolomon/workspace/OpenSource/Source/WebCore/WebCorePrefix.h:164: In file included from /Users/nathansolomon/workspace/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/FastMalloc.h:25: /Users/nathansolomon/workspace/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/DebugHeap.h:81:21: note: expanded from macro 'DEFINE_ALLOCATOR_WITH_HEAP_IDENTIFIER' 81 | WTF::DebugHeap& Type##Malloc::debugHeap() \ <scratch space>:180:1: note: expanded from here 180 | FrameRateAlignerMalloc And more. Most are related to a missing DECLARE_ALLOCATOR_WITH_HEAP_IDENTIFIER statement and due to a missing #include "AnimationMalloc.h” in AcceleratedTimeLine.h
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-16 15:35:43 PDT
<
rdar://problem/134090283
>
Nathan Solomon
Comment 2
2024-08-16 15:42:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32329
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug