Source/WebCore/animation/FrameRateAligner.h
@@ -32,7 +32,7 @@
 #include <wtf/Seconds.h>
 
 namespace WebCore {
-
+DECLARE_ALLOCATOR_WITH_HEAP_IDENTIFIER(FrameRateAligner);
 class FrameRateAligner {
     WTF_MAKE_FAST_ALLOCATED_WITH_HEAP_IDENTIFIER(Animation);
 public:
